@@ -4,6 +4,10 @@
 
   * Fix memory leak in C implementation of sorted_tree_items. (Dave Borowitz)
 
+ FEATURES
+
+  * Move named file initilization to BaseRepo. (Dave Borowitz)
+
  TESTS
 
   * Add tests for sorted_tree_items and C implementation. (Dave Borowitz)
